Standardize boolean values in playbooks to lowercase for consistency across multiple files, including accesspoint_workflow_manager.yml, configs_backup.yml, device_credential_intent.yml, and others. This change improves readability and aligns with YAML best practices.

--- a/playbooks/device_credential_intent.yml
+++ b/playbooks/device_credential_intent.yml
@@ -16,7 +16,7 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         state: merged
         config:
         - global_credential_details:
@@ -98,7 +98,7 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         state: deleted
         config:
         - global_credential_details:
