--- a/playbooks/device_credential_workflow_manager.yml
+++ b/playbooks/device_credential_workflow_manager.yml
@@ -12,9 +12,9 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         state: merged
-        config_verify: True
+        config_verify: true
         config:
         - global_credential_details:
             cli_credential:
@@ -64,9 +64,9 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         state: merged
-        config_verify: True
+        config_verify: true
         config:
         - assign_credentials_to_site:
             cli_credential:
@@ -96,9 +96,9 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         state: deleted
-        config_verify: True
+        config_verify: true
         config:
         - global_credential_details:
             cli_credential:
