--- a/playbooks/device_provision.yml
+++ b/playbooks/device_provision.yml
@@ -21,7 +21,7 @@
     - name: Provision a wired device to a site
       cisco.catalystcenter.provision_intent:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
@@ -31,7 +31,7 @@
     - name: Unprovision a wired device to a site
       cisco.catalystcenter.provision_intent:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: deleted
         config:
           - management_ip_address: 204.1.2.2
