--- a/playbooks/PnP.yml
+++ b/playbooks/PnP.yml
@@ -23,15 +23,15 @@
     - name: Import devices in bulk
       cisco.catalystcenter.pnp_intent:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
-        config_verify: True
+        config_verify: true
         config:
             - device_info:
               - serial_number: QD2425L8M7
                 state: Unclaimed
                 pid: c9300-24P
-                is_sudi_required: False
+                is_sudi_required: false
 
               - serial_number: QTC2320E0H9
                 state: Unclaimed
@@ -45,7 +45,7 @@
     - name: Add a new device and claim it
       cisco.catalystcenter.pnp_intent:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
@@ -54,12 +54,12 @@
                 hostname: Test-9300-10
                 state: Unclaimed
                 pid: c9300-24P
-                is_sudi_required: True
+                is_sudi_required: true
 
     - name: Claim a pre-added switch, apply a template, and perform an image upgrade for a specific site
       cisco.catalystcenter.pnp_intent:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
@@ -78,7 +78,7 @@
     - name: Claim an existing Wireless Controller, apply a template, and upgrade its image for a specified site
       cisco.catalystcenter.pnp_intent:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
@@ -101,9 +101,9 @@
     - name: Remove multiple devices from the PnP dashboard safely (ignores non-existent devices)
       cisco.catalystcenter.pnp_intent:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: deleted
-        config_verify: True
+        config_verify: true
         config:
           - device_info:
               - serial_number: QD2425L8M7  #Will get deleted
