--- a/playbooks/accesspoint_workflow_manager.yml
+++ b/playbooks/accesspoint_workflow_manager.yml
@@ -15,11 +15,11 @@
         api_port: "{{ api_port }}"
         version: "{{ version }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         log_level: DEBUG
-        config_verify: True
+        config_verify: true
         state: merged
-        force_sync: False
+        force_sync: false
         config:
           - mac_address: 90:e9:5e:03:f3:40
             rf_profile: "HIGH"
