--- a/playbooks/configs_backup.yml
+++ b/playbooks/configs_backup.yml
@@ -22,9 +22,9 @@
     - name: Take backup of a wired 9500 switch
       cisco.catalystcenter.device_configs_backup_workflow_manager:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
-        config_verify: True
+        config_verify: true
         config:
           - hostname: NY-BN-9500.cisco.local
             file_path: /home/admin/madhan_ansible/collections/ansible_collections/cisco/catalystcenter/playbooks/new_tmp
@@ -32,8 +32,8 @@
     - name: Take backup of all the switches
       cisco.catalystcenter.device_configs_backup_workflow_manager:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
-        config_verify: True
+        config_verify: true
         config:
           - family: Switches and Hubs
