--- a/playbooks/device_provision_workflow.yml
+++ b/playbooks/device_provision_workflow.yml
@@ -22,9 +22,9 @@
     - name: Assign a wired device to a site
       cisco.catalystcenter.provision_workflow_manager:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: merged
-        config_verify: True
+        config_verify: true
         config:
           - site_name_hierarchy: Global/USA/New York/NY_BLD1
 
@@ -34,10 +34,10 @@
     - name: Provision a wired device to a site
       cisco.catalystcenter.provision_workflow_manager:
         <<: *catalystcenter_login
-        log: True
+        log: true
         log_level: DEBUG
         state: merged
-        config_verify: True
+        config_verify: true
         config:
           - site_name_hierarchy: Global/USA/SAN JOSE/BLD23/BLD20_FLOOR2
             management_ip_address: 204.192.3.40
@@ -45,7 +45,7 @@
     - name: Unprovision a wired device from a site
       cisco.catalystcenter.provision_workflow_manager:
         <<: *catalystcenter_login
-        log: True
+        log: true
         state: deleted
         config:
           - management_ip_address: 204.1.2.2
@@ -53,10 +53,10 @@
     - name: Provision a wireless device to a site
       cisco.catalystcenter.provision_workflow_manager:
         <<: *catalystcenter_login
-        log: True
+        log: true
         log_level: DEBUG
         state: merged
-        config_verify: True
+        config_verify: true
         config:
           - site_name_hierarchy: Global/USA/RTP/BLD11
             management_ip_address: 204.192.12.201
