--- a/playbooks/ise_radius_integration_workflow_manager.yml
+++ b/playbooks/ise_radius_integration_workflow_manager.yml
@@ -12,12 +12,12 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         log_level: "{{ log_level }}"
-        log_append: True
+        log_append: true
         log_file_path: "{{ log_file_path }}"
         state: merged
-        config_verify: True
+        config_verify: true
         config:
         - authentication_policy_server:
           - server_type: AAA # [ISE, AAA]
@@ -41,12 +41,12 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         log_level: "{{ log_level }}"
-        log_append: True
+        log_append: true
         log_file_path: "{{ log_file_path }}"
         state: deleted
-        config_verify: True
+        config_verify: true
         config:
         - authentication_policy_server:
           - server_ip_address: 10.0.0.20
@@ -59,12 +59,12 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         log_level: "{{ log_level }}"
-        log_append: True
+        log_append: true
         log_file_path: "{{ log_file_path }}"
         state: merged
-        config_verify: True
+        config_verify: true
         config:
         - authentication_policy_server:
           - server_type: ISE # [ISE, AAA]
@@ -79,15 +79,15 @@
             retries: 3 # Range from 1 to 3
             timeout: 4 # Range from 2 to 20
             role: primary
-            pxgrid_enabled: False # Avaliable for Cisco ISE only
-            use_catalystcenter_cert_for_pxgrid: False
+            pxgrid_enabled: false # Avaliable for Cisco ISE only
+            use_catalystcenter_cert_for_pxgrid: false
             cisco_ise_dtos: # use this for creating the Cisco ISE Server
             - user_name: admin
               password: abcd
               fqdn: abc.cisco.com
               ip_address: 10.195.243.59
               description: CISCO ISE
-            trusted_server: True
+            trusted_server: true
             ise_integration_wait_time: 20
 
     - name: Delete an ISE Server.
@@ -98,12 +98,12 @@
         password: "{{ password }}"
         verify: "{{ verify }}"
         debug: "{{ debug }}"
-        log: True
+        log: true
         log_level: "{{ log_level }}"
-        log_append: True
+        log_append: true
         log_file_path: "{{ log_file_path }}"
         state: deleted
-        config_verify: True
+        config_verify: true
         config:
         - authentication_policy_server:
           - server_ip_address: 10.195.243.59
