--- a/playbooks/site_workflow_manager.yml
+++ b/playbooks/site_workflow_manager.yml
@@ -13,9 +13,9 @@
         api_port: "{{api_port}}"
         version: "{{version}}"
         debug: "{{debug}}"
-        log: True
+        log: true
         log_level: DEBUG
-        config_verify: True
+        config_verify: true
         state: merged
         config:
           - site:
