--- a/playbooks/swim_workflow_manager.yml
+++ b/playbooks/swim_workflow_manager.yml
@@ -16,9 +16,9 @@
         api_port: "{{api_port}}"
         version: "{{version}}"
         debug: "{{debug}}"
-        log: True
+        log: true
         log_level: DEBUG
-        verify: True
+        verify: true
         catalyst_api_task_timeout: 1000
         catalyst_task_poll_interval: 1
         config:
@@ -27,13 +27,13 @@
             url_details:
               payload:
               - source_url: http://172.21.236.183/swim/V1712_2_CCO/cat9k_iosxe.17.12.02.SPA.bin
-                third_party: False
+                third_party: false
           tagging_details:
             image_name: cat9k_iosxe.17.12.02.SPA.bin
             device_role: ALL
             device_image_family_name: Cisco Catalyst 9300 Switch
             site_name: "{{item.site_name}}"
-            tagging: True
+            tagging: true
           # image_distribution_details:
           #   image_name: cat9k_iosxe.17.12.02.SPA.bin
           #   site_name: "{{item.site_name}}"
@@ -46,8 +46,8 @@
             device_role: "{{ item.device_role }}"
             device_family_name: "{{ item.device_family_name }}"
             device_series_name: "Catalyst 9300 Series"
-            scehdule_validate: False
-            distribute_if_needed: True
+            scehdule_validate: false
+            distribute_if_needed: true
 
       with_items: "{{ image_details }}"
       tags:
