--- a/tests/integration/ccc_inventory_management/vars/vars_inventory_management.yml
+++ b/tests/integration/ccc_inventory_management/vars/vars_inventory_management.yml
@@ -24,7 +24,7 @@ device_details:
 
   # - type: "NETWORK_DEVICE"
   #   ip_address_list: ["204.192.6.200"]
-  #   device_added: True
+  #   device_added: true
   #   # CLI Credentials
   #   username: "cisco"
   #   password: "Cisco#123"
@@ -33,7 +33,7 @@ device_details:
   #   http_username: "wlcaccess"
   #   http_password: "Lablab#123"
   #   http_port: "443"
-  #   http_secure: False
+  #   http_secure: false
   #   # SNMP Credentials
   #   snmp_version: v3
   #   snmp_username: "v3Public2"
@@ -54,7 +54,7 @@ device_credential_updates:
   # Update CLI password
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.5"]
-    credential_update: True
+    credential_update: true
     # CLI Credentials
     password: "Cisco#1234"
 
@@ -62,7 +62,7 @@ device_credential_updates:
   # Update SNMP privacy type  
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.5"]
-    credential_update: True
+    credential_update: true
     # SNMP Credentials
     snmp_priv_protocol: "AES192"
 
@@ -70,7 +70,7 @@ device_credential_updates:
   # Update SNMP username
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.5"]
-    credential_update: True
+    credential_update: true
     # SNMP Credentials
     snmp_username: "v3Public2-2"
 
@@ -78,7 +78,7 @@ device_credential_updates:
   # Update SNMP mode
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.5"]
-    credential_update: True
+    credential_update: true
     # SNMP Credentials
     snmp_version: v3
     snmp_mode: "NOAUTHNOPRIV"
@@ -86,14 +86,14 @@ device_credential_updates:
   # Update cli_transport
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.5"]
-    credential_update: True
+    credential_update: true
     #change cli_transport from ssh to telnet
     cli_transport: telnet
 
   # SNMPv2 credentials
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.5"]
-    credential_update: True
+    credential_update: true
     snmp_version: v2
     snmp_ro_community: 'j5aj#0z%'
     snmp_rw_community: 'j5aj#0z%'
@@ -101,7 +101,7 @@ device_credential_updates:
   # Reverse changes
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.5"]
-    credential_update: True
+    credential_update: true
     # CLI Credentials
     username: "cisco"
     password: "Cisco#123"
@@ -150,8 +150,8 @@ device_int_update_post_rolechange:
 device_resync:
   # Resync the device
   - ip_address_list: ["204.1.2.5"]
-    device_resync: True
-    force_sync: False
+    device_resync: true
+    force_sync: false
 
 
 create_assign_udf:
@@ -265,4 +265,4 @@ delete_sites:
 delete_devices:
   - ip_address_list: ["204.1.2.5"]
     #ip_address_list: ["204.1.2.5", "204.192.6.200"]
-    clean_config: False
+    clean_config: false
