--- a/tests/integration/ccc_network_compliance_management/vars/vars_network_compliance_management.yml
+++ b/tests/integration/ccc_network_compliance_management/vars/vars_network_compliance_management.yml
@@ -41,23 +41,23 @@ run_compliance_category_site:
 
 run_compliance_false:
   - ip_address_list: ['204.1.2.5', '192.168.0.0']
-    run_compliance: False
+    run_compliance: false
 
 sync_config_iplist:
   - ip_address_list: ['204.1.2.5', '192.168.0.0']
-    sync_device_config: "True"
+    sync_device_config: "true"
 
 sync_config_site:
   - site_name: "Global"
-    sync_device_config: "True"
+    sync_device_config: "true"
 
 sync_config_iplist_site:
   - ip_address_list: ['204.1.2.5', '192.168.0.0']
     site_name: "Global"
-    sync_device_config: "True"
-    run_compliance: True
+    sync_device_config: "true"
+    run_compliance: true
 
 run_compliance_scale:
   - site_name: 'Global'
     run_compliance_batch_size: 1
-    run_compliance: True
+    run_compliance: true
