--- a/tests/integration/ccc_swim_management/vars/vars_swim_management.yml
+++ b/tests/integration/ccc_swim_management/vars/vars_swim_management.yml
@@ -5,13 +5,13 @@ image_details:
       url_details:
         payload:
         - source_url: http://172.21.236.183/swim/V1712_2_CCO/cat9k_iosxe.17.12.02.SPA.bin
-          third_party: False
+          third_party: false
   - import_image_details:
       type: "remote"
       url_details:
         payload:
         - source_url: http://10.197.156.28/stda/abimishr/cat9k_iosxe.17.12.01.SPA.bin
-          third_party: False
+          third_party: false
 
 
 
@@ -21,7 +21,7 @@ image_golden_tagging_details:
       site_name: "Global/ITest_Swim_Area/ITest_Swim_Building/ITest_Swim_Floor1"
       device_role: "DISTRIBUTION"
       device_image_family_name: "Cisco Catalyst 9300 Switch"
-      tagging: True
+      tagging: true
 
 image_distributation_details:
   - image_distribution_details:
@@ -38,8 +38,8 @@ image_activation_details:
       device_role: "DISTRIBUTION"
       device_family_name: "Switches and Hubs"
       device_series_name: "Cisco Catalyst 9300 Series Switches"
-      scehdule_validate: False
-      distribute_if_needed: True
+      scehdule_validate: false
+      distribute_if_needed: true
 
 image_golden_untagging_details:
   - tagging_details:
@@ -47,7 +47,7 @@ image_golden_untagging_details:
       site_name: "Global/ITest_Swim_Area/ITest_Swim_Building/ITest_Swim_Floor1"
       device_role: "DISTRIBUTION"
       device_image_family_name: "Cisco Catalyst 9300 Switch"
-      tagging: False  
+      tagging: false  
 
 
 design_sites:
@@ -81,7 +81,7 @@ design_sites:
 device_details:
   - type: "NETWORK_DEVICE"
     ip_address_list: ["204.1.2.3"]
-    device_added: True
+    device_added: true
     # CLI Credentials
     username: "cisco"
     password: "Cisco#123"
@@ -121,4 +121,4 @@ delete_sites:
 delete_devices:
   - ip_address_list: ["204.1.2.3"]
     #ip_address_list: ["204.1.2.5", "204.192.6.200"]
-    clean_config: False
+    clean_config: false
