Standardize boolean values in playbooks by changing 'gather_facts: no' to 'gather_facts: false' for consistency and improved readability across multiple files.

--- a/playbooks/accesspoint_workflow_manager.yml
+++ b/playbooks/accesspoint_workflow_manager.yml
@@ -2,7 +2,7 @@
 - name: Provision/Move/Update Wireless Access Point Configuration
   hosts: catalystcenter_servers
   connection: local
-  gather_facts: no
+  gather_facts: false
   vars_files:
     - "credentials.yml"
   tasks:
