--- a/playbooks/network_compliance_workflow_manager.yml
+++ b/playbooks/network_compliance_workflow_manager.yml
@@ -1,7 +1,7 @@
 ---
 - name: Testing
   hosts: catalystcenter_servers
-  gather_facts: no
+  gather_facts: false
 
   vars_files:
     - "credentials.yml"
