--- a/playbooks/PnP.yml
+++ b/playbooks/PnP.yml
@@ -2,7 +2,7 @@
 - name: Manage operations - Add, claim, and delete devices of Onboarding Configuration (PnP)
   hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
 
   vars_files:
     - "{{ CLUSTERFILE }}"
