--- a/playbooks/configs_backup.yml
+++ b/playbooks/configs_backup.yml
@@ -2,7 +2,7 @@
 - name: Take running config backup of devices
   hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
 
   vars_files:
     - "{{ CLUSTERFILE }}"
