--- a/playbooks/device_provision_workflow.yml
+++ b/playbooks/device_provision_workflow.yml
@@ -2,7 +2,7 @@
 - name: Provision and Re-provision wired and wireless devices
   hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
 
   vars_files:
     - "{{ CLUSTERFILE }}"
