--- a/playbooks/discovery_workflow_manager.yml
+++ b/playbooks/discovery_workflow_manager.yml
@@ -2,7 +2,7 @@
 - name: Discover devices using multiple discovery specific credentials and delete all the discoveries
   hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
 
   vars_files:
     - "{{ CLUSTERFILE }}"
