--- a/playbooks/network_settings_intent.yml
+++ b/playbooks/network_settings_intent.yml
@@ -1,7 +1,7 @@
 - hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
-  gather_facts: no
+  gather_facts: false
   connection: local
   tasks:
 #
