--- a/playbooks/site_workflow_manager.yml
+++ b/playbooks/site_workflow_manager.yml
@@ -1,6 +1,6 @@
 - hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
   vars_files:
     - "credentials.yml"
   tasks:
