--- a/playbooks/swim_workflow_manager.yml
+++ b/playbooks/swim_workflow_manager.yml
@@ -2,7 +2,7 @@
 - name: Configure device credentials on Cisco CATALYST Center
   hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
   vars_files:
     - "input_swim.yml"
     - "credentials.yml"
