--- a/playbooks/test_swim_module.yml
+++ b/playbooks/test_swim_module.yml
@@ -2,7 +2,7 @@
 - name: Configure device credentials on Cisco CATALYST Center
   hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
   vars_files:
     - "input_swim.yml" #Contains image and device details
     - "credentials.yml"
