--- a/playbooks/device_provision.yml
+++ b/playbooks/device_provision.yml
@@ -3,10 +3,8 @@
   hosts: localhost
   connection: local
   gather_facts: false
-
   vars_files:
     - "{{ CLUSTERFILE }}"
-
   vars:
     catalystcenter_login: &catalystcenter_login
       host: "{{ host }}"
@@ -16,21 +14,18 @@
       api_port: "{{ api_port }}"
       version: "{{ version }}"
       debug: "{{ debug }}"
-
   tasks:
     - name: Provision a wired device to a site
       cisco.catalystcenter.provision_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
             management_ip_address: 204.1.2.2
-
-
     - name: Unprovision a wired device to a site
       cisco.catalystcenter.provision_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         log: true
         state: deleted
         config:
