--- a/playbooks/discovery.yml
+++ b/playbooks/discovery.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: catalystcenter_servers
+- name: Play
+  hosts: localhost
   vars:
     globalCredentialIdList:
       - "90acbab8-03d5-4726-9c19-e1e51a40b3cd"
