Refactor playbooks and workflows to enhance readability and consistency by standardizing variable naming conventions, adjusting comment formatting, and excluding specific paths from ansible-lint checks. This includes changing 'globalCredentialIdList' to 'global_credential_id_list' and improving debug message formatting in playbooks.

--- a/playbooks/download_device_cmd_runner_output.yml
+++ b/playbooks/download_device_cmd_runner_output.yml
@@ -65,7 +65,9 @@
     - name: Show extract of data
       ansible.builtin.debug:
         msg: >-
-          Filename: {{ download_file.catalystcenter_response.filename }} Filepath: {{ download_file.catalystcenter_response.path }} Data extract: {{ download_file.catalystcenter_response.data[:50]}}"
+          Filename: {{ download_file.catalystcenter_response.filename }}
+          Filepath: {{ download_file.catalystcenter_response.path }}
+          Data extract: {{ download_file.catalystcenter_response.data[:50] }}"
       when:
         - download_file is defined
         - download_file.catalystcenter_response is defined
