--- a/playbooks/discovery.yml
+++ b/playbooks/discovery.yml
@@ -2,7 +2,7 @@
 - name: Play
   hosts: localhost
   vars:
-    globalCredentialIdList:
+    global_credential_id_list:
       - "90acbab8-03d5-4726-9c19-e1e51a40b3cd"
       - "f979d842-f6fd-456a-8137-2cb5113cd2e8"
   vars_files:
@@ -21,7 +21,7 @@
       register: discovery_range_result
     - name: Set fact of filtered discoveries
       ansible.builtin.set_fact:
-        discoveries_filtered: "{{ discovery_range_result.catalystcenter_response.response | selectattr('name', 'equalto', 'DMZ Lab 2')}}"
+        discoveries_filtered: "{{ discovery_range_result.catalystcenter_response.response | selectattr('name', 'equalto', 'DMZ Lab 2') }}"
       when:
         - discovery_range_result is defined
         - discovery_range_result.catalystcenter_response is defined
@@ -29,7 +29,7 @@
       register: discovery_filtered_results
     - name: Set fact of filtered discovery
       ansible.builtin.set_fact:
-        discovery_filtered: "{{ discovery_filtered_results.ansible_facts.discoveries_filtered|first }}"
+        discovery_filtered: "{{ discovery_filtered_results.ansible_facts.discoveries_filtered | first }}"
       when:
         - discovery_filtered_results is defined
         - discovery_filtered_results.ansible_facts is defined
@@ -55,7 +55,7 @@
         state: present
         cdpLevel: 16
         discoveryType: CDP
-        globalCredentialIdList: "{{ globalCredentialIdList }}"
+        global_credential_id_list: "{{ global_credential_id_list }}"
         ipAddressList: 10.10.22.22
         name: start_discovery_test2
         protocolOrder: ssh
@@ -91,7 +91,7 @@
         state: present
         cdpLevel: 16
         discoveryType: CDP
-        globalCredentialIdList: "{{ globalCredentialIdList }}"
+        global_credential_id_list: "{{ global_credential_id_list }}"
         ipAddressList: 10.10.22.22
         name: start_discovery_test2
         protocolOrder: ssh
