--- a/.github/workflows/sanity_tests.yml
+++ b/.github/workflows/sanity_tests.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   NAMESPACE: cisco
-  COLLECTION_NAME: dnac
+  COLLECTION_NAME: catalystcenter
 
 jobs:
   sanity:
@@ -27,13 +27,13 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
         with:
-          path: cisco-en-programmability/dnacenter-ansible
+          path: cisco-en-programmability/catalystcenter-ansible
 
       - name: Create directory
         run: mkdir -p ./ansible_collections/${{env.NAMESPACE}}
 
       - name: Move repository
-        run: mv ./cisco-en-programmability/dnacenter-ansible ./ansible_collections/${{env.NAMESPACE}}/${{env.COLLECTION_NAME}}
+        run: mv ./cisco-en-programmability/catalystcenter-ansible ./ansible_collections/${{env.NAMESPACE}}/${{env.COLLECTION_NAME}}
 
       - name: Set up Python
         uses: actions/setup-python@v3
